# DynAdjust

./: .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  __.travis.yml__
dynadjust/: CMakeLists.debug.txt  CMakeLists.release.txt  CMakeLists.txt  FindMKL.cmake  FindXSD.cmake  FindXSD_ubuntu.cmake  FindXSD_ubunutu.cmake  FindXercesC.cmake  FindXercesC_ubunutu.cmake  TODO  changelog-1.0.0.txt  dynadjust.doxygen  dynadjust.props  dynadjust.rc  dynadjust_1_00_00.sln  dynadjust_1_00_02.sln  dynadjust_1_02_04.sln  dynadjust_1_02_06.sln  dynadjust_1_02_08.sln  install_dna_prereqrequites.sh  install_dna_prerequisites.sh  install_dna_prerequisites_ubuntu.sh  make_dynadjust_gcc.sh  make_dynadjust_gcc_darwin_brew.sh  make_dynadjust_gcc_ubuntu.sh  resource.h
dynadjust/dynadjust/dnaadjust/: CMakeLists.debug.txt  CMakeLists.txt  dnaadjust-multi.cpp  dnaadjust-stage.cpp  dnaadjust.cpp  dnaadjust.hpp  dnaadjust.vcxproj  dnaadjust.vcxproj.filters  precompile.h
dynadjust/dynadjust/dnaadjustwrapper/: CMakeLists.debug.txt  CMakeLists.release.txt  CMakeLists.txt  dnaadjustprogress.cpp  dnaadjustprogress.hpp  dnaadjustwrapper.cpp  dnaadjustwrapper.hpp  dnaadjustwrapper.vcxproj  dnaadjustwrapper.vcxproj.filters  precompile.h
dynadjust/dynadjust/dnageoid/: CMakeLists.debug.txt  CMakeLists.release.txt  CMakeLists.txt  READ-ME-FIRST-BEFORE-BUILDING.txt  bicubic_interpolation.hpp  dnageoid.cpp  dnageoid.hpp  dnageoid.vcxproj  dnageoid.vcxproj.filters  dnageoid_ext.cpp  dnageoid_ext.def  dnageoid_ext.hpp  precompile.h
dynadjust/dynadjust/dnageoidint/: FileProc.cpp  FileProc.h  InputCoords.cpp  InputCoords.h  ReadMe.txt  RegProc.cpp  RegProc.h  Resource.h  dnageoidint.cpp  dnageoidint.h  dnageoidint.rc  dnageoidint.vcxproj  dnageoidint.vcxproj.filters  dnageoidintDlg.cpp  dnageoidintDlg.h  precompile.cpp  precompile.h  stdafx.cpp  stdafx.h
dynadjust/dynadjust/dnageoidwrapper/: CMakeLists.debug.txt  CMakeLists.txt  dnageoidwrapper.cpp  dnageoidwrapper.hpp  dnageoidwrapper.vcxproj  dnageoidwrapper.vcxproj.filters  precompile.h
dynadjust/dynadjust/dnaimport/: CMakeLists.debug.txt  CMakeLists.release.txt  CMakeLists.txt  dnaimport.vcxproj  dnaimport.vcxproj.filters  dnainterop.cpp  dnainterop.hpp  dnaparser_pimpl.cxx  dnaparser_pimpl.hxx  dnaparser_pskel.cxx  dnaparser_pskel.hxx  precompile.h
dynadjust/dynadjust/dnaimportwrapper/: CMakeLists.debug.txt  CMakeLists.release.txt  CMakeLists.txt  dnaimportwrapper.cpp  dnaimportwrapper.hpp  dnaimportwrapper.vcxproj  dnaimportwrapper.vcxproj.filters  precompile.h
dynadjust/dynadjust/dnaplot/: CMakeLists.debug.txt  CMakeLists.release.txt  CMakeLists.txt  dnaplot.cpp  dnaplot.hpp  dnaplot.vcxproj  dnaplot.vcxproj.filters  precompile.h
dynadjust/dynadjust/dnaplotwrapper/: CMakeLists.debug.txt  CMakeLists.txt  dnaplotwrapper.cpp  dnaplotwrapper.hpp  dnaplotwrapper.vcxproj  dnaplotwrapper.vcxproj.filters  precompile.cpp  precompile.h
dynadjust/dynadjust/dnareftran/: CMakeLists.debug.txt  CMakeLists.release.txt  CMakeLists.txt  dnareftran.cpp  dnareftran.hpp  dnareftran.vcxproj  dnareftran.vcxproj.filters  precompile.h
dynadjust/dynadjust/dnareftranwrapper/: CMakeLists.debug.txt  CMakeLists.txt  dnareftranwrapper.cpp  dnareftranwrapper.hpp  dnareftranwrapper.vcxproj  dnareftranwrapper.vcxproj.filters  precompile.h
dynadjust/dynadjust/dnasegment/: CMakeLists.debug.txt  CMakeLists.txt  dnasegment.cpp  dnasegment.hpp  dnasegment.vcxproj  dnasegment.vcxproj.filters  precompile.h
dynadjust/dynadjust/dnasegmentwrapper/: CMakeLists.debug.txt  CMakeLists.txt  dnasegmentwrapper.cpp  dnasegmentwrapper.hpp  dnasegmentwrapper.vcxproj  dnasegmentwrapper.vcxproj.filters  precompile.h
dynadjust/dynadjust/driver/: driver.cpp  driver.vcxproj  driver.vcxproj.filters
dynadjust/dynadjust/dynadjust/: CMakeLists.debug.txt  CMakeLists.txt  dynadjust.cpp  dynadjust.vcxproj  dynadjust.vcxproj.filters  precompile.h
dynadjust/dynadjust/metadata/: metadata.cpp  metadata.vcxproj  metadata.vcxproj.filters  precompile.cpp  precompile.h
dynadjust/dynadjust/sample/: precompile.h  sample.cpp  sample.vcxproj  sample.vcxproj.filters
dynadjust/include/config/: dnaconsts-interface.hpp  dnaconsts-iostream.hpp  dnaconsts.hpp  dnaexports.hpp  dnaoptions-helper.hpp  dnaoptions-interface.hpp  dnaoptions.hpp  dnaprojectfile.cpp  dnaprojectfile.hpp  dnatypes-gui.hpp  dnatypes.hpp  dnaversion-stream.hpp  dnaversion.hpp
dynadjust/include/exception/: dnaexception.hpp
dynadjust/include/functions/: dnafilepathfuncs.hpp  dnaintegermanipfuncs.hpp  dnaiostreamfuncs.hpp  dnaparallelfuncs.hpp  dnaprocessfuncs.cpp  dnaprocessfuncs.hpp  dnastringfuncs.cpp  dnastringfuncs.hpp  dnastrmanipfuncs.hpp  dnatemplatecalcfuncs.hpp  dnatemplatedatetimefuncs.hpp  dnatemplatefuncs.hpp  dnatemplategeodesyfuncs.hpp  dnatemplatematrixfuncs.hpp  dnatemplatematrixio.hpp  dnatemplatestnmsrfuncs.hpp  dnatransparamfuncs.hpp  stringtodouble.cpp
dynadjust/include/ide/: trace.cpp  trace.hpp
dynadjust/include/io/: DynaML-schema.cxx  DynaML-schema.hxx  dnaioadj.cpp  dnaioadj.hpp  dnaioaml.cpp  dnaioaml.hpp  dnaioasl.cpp  dnaioasl.hpp  dnaiobase.cpp  dnaiobase.hpp  dnaiobms.cpp  dnaiobms.hpp  dnaiobst.cpp  dnaiobst.hpp  dnaiodna.cpp  dnaiodna.hpp  dnaiodnatypes.hpp  dnaiofrx.cpp  dnaiofrx.hpp  dnaiomap.cpp  dnaiomap.hpp  dnaiopdf.cpp  dnaiopdf.hpp  dnaioscalar.cpp  dnaioscalar.hpp  dnaioseg.cpp  dnaioseg.hpp  dnaiosnx.hpp  dnaiosnxread.cpp  dnaiosnxwrite.cpp  dnaiotbu.cpp  dnaiotbu.hpp  dnaiotpb.cpp  dnaiotpb.hpp  pdfdde.cpp
dynadjust/include/math/: dnamatrix_contiguous.cpp  dnamatrix_contiguous.hpp
dynadjust/include/measurement_types/: dnaangle.cpp  dnaangle.hpp  dnacoordinate.cpp  dnacoordinate.hpp  dnadirection.cpp  dnadirection.hpp  dnadirectionset.cpp  dnadirectionset.hpp  dnadistance.cpp  dnadistance.hpp  dnageometries.hpp  dnagpsbaseline.cpp  dnagpsbaseline.hpp  dnagpspoint.cpp  dnagpspoint.hpp  dnaheight.cpp  dnaheight.hpp  dnaheightdifference.cpp  dnaheightdifference.hpp  (+8 more)
resources/nci changes/: CMakeLists.txt  FindMKL.cmake  FindXSD.cmake  FindXercesC.cmake  dnaiosnx.hpp  dnaiosnxread.cpp
(+103 files in other folders)
